hard-gists/5356796/run.log
=== Docker Run Log for 5356796 ===
Started at: Mi 29. Okt 15:37:20 CET 2025

[2025-10-29 15:37:21] START: Running container for 5356796
[2025-10-29 15:37:21] SUCCESS: Container cb2624988a246ab104b324242071c6c5ab0e12c590b8c509b1e18b4a3d2db3a8 started for 5356796
=== Container logs for 5356796 ===
  File "/snippet.py", line 21
    print generator.generate()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5356796 ===
[2025-10-29 15:37:23] INFO: Container cb2624988a246ab104b324242071c6c5ab0e12c590b8c509b1e18b4a3d2db3a8 has stopped
